// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FunctionDeclaration > client > should skip non-async server functions 1`] = `
"function example() {
  'use server';

  return 'foo bar';
}"
`;

exports[`FunctionDeclaration > client > should skip top-level values for scope 1`] = `
"import { $$server as _$$server } from "use-server-directive/client";
const value = 'foo bar';
const _server = _$$server("/__server/bb5fd6ee-example-0-example");
const outer = () => {
  async function example() {
    const [_type, _result] = await _server();
    if (_type === 2) {
      return _result;
    }
  }
};"
`;

exports[`FunctionDeclaration > client > should transform valid server functions 1`] = `
"import { $$server as _$$server } from "use-server-directive/client";
const _server = _$$server("/__server/bb5fd6ee-example-0-example");
async function example() {
  const [_type, _result] = await _server();
  if (_type === 2) {
    return _result;
  }
}"
`;

exports[`FunctionDeclaration > client > should transform valid server functions with scope 1`] = `
"import { $$server as _$$server } from "use-server-directive/client";
const _server = _$$server("/__server/bb5fd6ee-example-0-example");
const outer = () => {
  const value = 'foo bar';
  async function example() {
    const [_type, _result] = await _server(value);
    if (_type === 2) {
      return _result;
    }
  }
};"
`;

exports[`FunctionDeclaration > server > should skip non-async server functions 1`] = `
"function example() {
  'use server';

  return 'foo bar';
}"
`;

exports[`FunctionDeclaration > server > should skip top-level values for scope 1`] = `
"import { $$server as _$$server } from "use-server-directive/server";
const value = 'foo bar';
const _server = _$$server("/__server/bb5fd6ee-example-0-example", async function () /*@skip use-server-directive*/{
  'use server';

  return [2, value];
  return [3];
});
const outer = () => {
  async function example() {
    const [_type, _result] = await _server();
    if (_type === 2) {
      return _result;
    }
  }
};"
`;

exports[`FunctionDeclaration > server > should transform valid server functions 1`] = `
"import { $$server as _$$server } from "use-server-directive/server";
const _server = _$$server("/__server/bb5fd6ee-example-0-example", async function () /*@skip use-server-directive*/{
  'use server';

  return [2, 'foo bar'];
  return [3];
});
async function example() {
  const [_type, _result] = await _server();
  if (_type === 2) {
    return _result;
  }
}"
`;

exports[`FunctionDeclaration > server > should transform valid server functions with scope 1`] = `
"import { $$server as _$$server } from "use-server-directive/server";
const _server = _$$server("/__server/bb5fd6ee-example-0-example", async function (value) /*@skip use-server-directive*/{
  'use server';

  return [2, value];
  return [3];
});
const outer = () => {
  const value = 'foo bar';
  async function example() {
    const [_type, _result] = await _server(value);
    if (_type === 2) {
      return _result;
    }
  }
};"
`;
